[gd_scene load_steps=4 format=3 uid="uid://bxtn8e8m61sj3"]

[ext_resource type="Script" path="res://Scripts/Testing/NaixTestScripts/MultiplayerController.gd" id="1_wmt0j"]
[ext_resource type="Script" path="res://Scripts/Testing/NaixTestScripts/ServerBrowser.gd" id="2_7edh8"]
[ext_resource type="PackedScene" uid="uid://cmcbvg1ut85i8" path="res://Scenes/Testing/NaixTestScenes/ServerInfo.tscn" id="3_bgp3x"]

[node name="Multiplayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmt0j")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 553.0
offset_top = 193.0
offset_right = 608.0
offset_bottom = 224.0
text = "Host
"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 129.0
offset_right = 260.0
offset_bottom = 167.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 301.0
offset_top = 127.0
offset_right = 438.0
offset_bottom = 165.0
text = "Start Game"

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 47.0
offset_right = 477.0
offset_bottom = 95.0

[node name="NameEditLabel" type="Label" parent="NameEdit"]
layout_mode = 0
offset_left = -64.0
offset_top = 5.0
offset_bottom = 42.0
text = "Name"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 364.0
offset_right = 510.0
offset_bottom = 395.0

[node name="Address" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 298.0
offset_right = 511.0
offset_bottom = 329.0

[node name="ServerBrowser" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_7edh8")
ServerInfo = ExtResource("3_bgp3x")

[node name="BroadcastTimer" type="Timer" parent="ServerBrowser"]

[node name="Label" type="Label" parent="ServerBrowser"]
layout_mode = 0
offset_left = 757.0
offset_top = 44.0
offset_right = 921.0
offset_bottom = 70.0
scale = Vector2(1, 1.00725)
text = "Bound to listen port: "

[node name="Panel" type="Panel" parent="ServerBrowser"]
layout_mode = 0
offset_left = 163.0
offset_top = 435.0
offset_right = 851.0
offset_bottom = 682.0

[node name="ServerInfoHeading" type="HBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 2
offset_top = 34.0
offset_right = 687.0
offset_bottom = 92.0

[node name="Name" type="Label" parent="ServerBrowser/Panel/ServerInfoHeading"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="IP" type="Label" parent="ServerBrowser/Panel/ServerInfoHeading"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP"

[node name="PlayerCount" type="Label" parent="ServerBrowser/Panel/ServerInfoHeading"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Count"

[node name="Join" type="Label" parent="ServerBrowser/Panel/ServerInfoHeading"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join
"

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 0
offset_top = 93.0
offset_right = 687.0
offset_bottom = 242.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1041.0
offset_top = 168.0
offset_right = 1118.0
offset_bottom = 215.0
text = "test add player (host)"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
[connection signal="timeout" from="ServerBrowser/BroadcastTimer" to="ServerBrowser" method="_on_broadcast_timer_timeout"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
